@@ -1,3 +1,10 @@
+2017-03-27  Mark Wielaard  <mark@klomp.org>
+
+	* fillfile.c: New file.
+	* Makefile.am (check_PROGRAMS): Add fillfile.
+	(TESTS): Likewise.
+	(fillfile_LDADD): New variable.
+
 2017-02-15  Mark Wielaard  <mark@klomp.org>
 
 	* Makefile.am (EXTRA_DIST): Add testfileppc64attrs.o.bz2.
